--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,8 @@
       routerLinkActive="active"
       >Users</a
     >
+    <a routerLink="/charts" *ngIf="(user$ | async)?.role === 'admin'" routerLinkActive="active">Charts</a>
+    <a routerLink="/signatures" *ngIf="(user$ | async)?.role === 'admin'" routerLinkActive="active">Signatures</a>
 
     <div class="right-group">
       <select
